--- a/styles/RightPanel.scss
+++ b/styles/RightPanel.scss
@@ -1,7 +1,7 @@
 .RightPanel {
     height: 100%;
     width: 30%;
-    float: right;
+    float: left;
     background-color: green;
     position: relative;
     z-index: 1;
