--- a/styles/Clock.scss
+++ b/styles/Clock.scss
@@ -2,13 +2,22 @@
     text-align: center;
     list-style: none;
 
-    .clock {
-        height: 100px;
-        width: 400px;
-        font-family: 'Verdana';
+    .timeText {
         color: white;
-        font-size: 50px;
-        margin: 20px;
+        font-size: 2.5em;
     }
+    
+    
+    .dowText {
+        color: white;
+        font-size: 2em;
+    }
+
+    .dateText {
+        color: white;
+    }
+
 }
+
+
 
