add real-time arrows for stock calls

--- a/styles/LeftPanel.scss
+++ b/styles/LeftPanel.scss
@@ -2,6 +2,6 @@
     height: 100%;
     width: 30%;
     float: left;
-    background-color: red;
+    background-color: lightpink;
     position: relative;
 }
