done for now :) gotta make a demo

--- a/styles/RightPanel.scss
+++ b/styles/RightPanel.scss
@@ -2,7 +2,7 @@
     height: 100%;
     width: 30%;
     float: left;
-    background-color: green;
+    background-color: #0e1111;
     position: relative;
     z-index: 1;
     
