--- a/styles/LeftPanel.scss
+++ b/styles/LeftPanel.scss
@@ -2,6 +2,6 @@
     height: 100%;
     width: 30%;
     float: left;
-    background-color: lightpink;
+    background-color: #0e1111;
     position: relative;
 }
