--- a/styles/Mirror.scss
+++ b/styles/Mirror.scss
@@ -2,7 +2,7 @@
     position: relative;
     height: 100%;
     width: 40%;
-    background-color: pink;
+    background-color: #0e1111;
     float: left;
     z-index: -100;
 
